--- a/extras_src/manual/StdLibMan2.adoc
+++ b/extras_src/manual/StdLibMan2.adoc
@@ -1,10 +1,12 @@
-// *****************************************************************************
-// *                                                                           *
-// *                   ALAN Standard Library User's Manual                     *
-// *                                                                           *
-// *                                 PART II                                   *
-// *                                                                           *
-// *****************************************************************************
+////
+********************************************************************************
+*                                                                              *
+*                     ALAN Standard Library User's Manual                      *
+*                                                                              *
+*                          PART II — Library Classes                           *
+*                                                                              *
+********************************************************************************
+////
 
 
 [[part.library-classes]]
