--- a/extras_src/manual/StdLibMan2_01.adoc
+++ b/extras_src/manual/StdLibMan2_01.adoc
@@ -3,7 +3,7 @@
 *                                                                              *
 *                     ALAN Standard Library User's Manual                      *
 *                                                                              *
-*                          PART II — 1. Introduction                           *
+*                   PART II — Library Classes » Introduction                   *
 *                                                                              *
 ********************************************************************************
 ////
