--- a/extras_src/manual/StdLibMan2_03.adoc
+++ b/extras_src/manual/StdLibMan2_03.adoc
@@ -3,7 +3,7 @@
 *                                                                              *
 *                     ALAN Standard Library User's Manual                      *
 *                                                                              *
-*                                  Chapter 4                                   *
+*                      PART II — Library Classes » Things                      *
 *                                                                              *
 ********************************************************************************
 ////
