--- a/extras_src/manual/StdLibMan2_04.adoc
+++ b/extras_src/manual/StdLibMan2_04.adoc
@@ -3,7 +3,7 @@
 *                                                                              *
 *                     ALAN Standard Library User's Manual                      *
 *                                                                              *
-*                                  Chapter 5                                   *
+*                      PART II — Library Classes » Actors                      *
 *                                                                              *
 ********************************************************************************
 ////
