--- a/extras_src/manual/StdLibMan2_06.adoc
+++ b/extras_src/manual/StdLibMan2_06.adoc
@@ -3,7 +3,7 @@
 *                                                                              *
 *                     ALAN Standard Library User's Manual                      *
 *                                                                              *
-*                                  Chapter 7                                   *
+*                      PART II — Library Classes » ????                        *
 *                                                                              *
 ********************************************************************************
 ////
